# kali-mcp

./: .gitignore  LICENSE  README.md  chains.py  claude_desktop_config.json.example  config.py  cred_vault.py  engagement.py  findings.py  health.py  install.sh  job_manager.py  kali-mcp.service  parsers.py  pyproject.toml  pytest.ini  remediation.py  requirements.txt  scope.py  server.py  suggest.py  triage.py  webhook.py  workflow.py
.github/workflows/: test.yml
tests/: conftest.py  test_chains.py  test_core.py  test_coverage_gaps.py  test_finding_status.py  test_findings.py  test_fixes_hp.py  test_fixes_lp.py  test_fixes_missing.py  test_fixes_mp.py  test_html_and_chains_tool.py  test_report.py  test_report_polish.py  test_suggest.py  test_tier1.py  test_tier2.py  test_tier3.py  test_tools_exploit.py  test_tools_recon.py  test_tools_reporting.py  test_tools_scanning.py  test_tools_vuln.py  test_tools_web.py
tools/: base.py  file_tools.py
tools/exploitation/: hydra.py  metasploit.py  netcat.py  sqlmap.py  ssh_tools.py
tools/reconnaissance/: amass.py  dig_tool.py  nmap.py  subfinder.py  theharvester.py  whois_tool.py
tools/reporting/: pcap_parser.py  report_generator.py
tools/scanning/: enum4linux.py  fast_port_scan.py  ffuf.py  gobuster.py  nikto.py  smbclient_tool.py
tools/vulnerability/: cve_to_exploit.py  nuclei.py  searchsploit.py  wpscan.py
tools/web/: screenshot.py  web_crawler.py  web_tools.py
