[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kali-mcp"
version = "1.0.0"
description = "AI-assisted penetration testing MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.2",
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "paramiko>=5.0.0",
    "anyio>=4.13.0",
    "uvicorn>=0.49.0",
    "starlette>=1.2.1",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-asyncio>=1.4.0", "pytest-timeout>=2.4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
timeout = 120
addopts = "-m 'not slow'"
markers = [
    "slow: long-running tests (pytest -m slow)",
    "live: requires a live target (pytest -m live)",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
